fixed alignment of bottom section

--- a/css/styles.css
+++ b/css/styles.css
@@ -508,10 +508,16 @@ input[type="radio"]:checked + .form-radio_choice_type_label::after {
   justify-content: flex-start;
 }
 
+.form-select_remove:hover{
+  outline: 2px solid #6ea9df;
+  cursor: pointer;
+}
+
 .form-select_remove_images{
 height: 20px;
 width: 20px;
 }
+
 .form-wrapper_radio_tone_urgent {
   display: flex;
   justify-content: space-between;
@@ -576,14 +582,17 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
 .form-sections_headers_text_urgent::before {
   content: "4";
 }
+
 .form-range_input {
   width: 100%;
   -webkit-appearance: none;
   background: transparent;
 }
+
 .form-range_input::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
+
 .form-range_input::-ms-track {
   width: 100%;
   cursor: pointer;
@@ -591,6 +600,7 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
   border-color: transparent;
   color: transparent;
 }
+
 .form-range_input::-webkit-slider-runnable-track {
   -webkit-appearance: none;
   appearance: none;
@@ -598,9 +608,16 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
   background: #e6f2ff;
   height: 10px;
 }
+
 .form-range_input:focus {
   outline: none;
 }
+
+.form-range_input:hover{
+  cursor: pointer;
+  outline: 2px solid #6ea9df;
+}
+
 .range_text {
   text-transform: uppercase;
   font-size: 14px;
@@ -611,7 +628,7 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
 }
 
 .orange {
-  color: #ffa64d;
+  color: #d6a26d;
   font-size: 16px;
 }
 
@@ -637,10 +654,10 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
   height: 20px;
   width: 20px;
   border-radius: 50px;
-  background-color: #ffa64d;
+  background-color: #d6a26d;
   margin-top: -5px;
   box-sizing: border-box;
-  z-index: 2999;
+  z-index: 2;
   position: relative;
 }
 .form-range_input::-moz-range-thumb {
@@ -649,11 +666,10 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
   height: 40px;
   width: 40px;
   border-radius: 50px;
-  background-color: yellow;
   margin-top: -5px;
   box-sizing: border-box;
   border: 2px solid red;
-  z-index: 2999;
+  z-index: 2;
   position: relative;
 }
 .form-range_input::-ms-thumb {
@@ -662,11 +678,10 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
   height: 40px;
   width: 40px;
   border-radius: 50px;
-  background-color: yellow;
   margin-top: -5px;
   box-sizing: border-box;
   border: 2px solid red;
-  z-index: 2999;
+  z-index: 2;
   position: relative;
 }
 .form-urgent_info {
@@ -699,7 +714,13 @@ input[type="radio"]:checked + .form-select_tone_radio_label::after {
 .form-sign_pay_method {
   display: flex;
   flex-direction: column;
+  padding-left: 40px;
 }
+
+.form-sign_pay_method_header{
+  margin-left: 0;
+}
+
 .form-sign_pay_method_header::before {
   content: "5";
 }
@@ -1245,6 +1266,7 @@ input[type="checkbox"]:checked ~ .form-label_agree::after {
   .form-main {
     margin: 2em 3em;
     width: 90%;
+    padding: 0 4em 0 2em;
   }
   .form-header_info {
     margin-left: 1em;
@@ -1257,27 +1279,37 @@ input[type="checkbox"]:checked ~ .form-label_agree::after {
   .wrapper_form-header_status_buttons {
     padding-top: 20px;
   }
+  
   .form-radio_choice_type {
     margin-top: 2em;
   }
+
   input[type="radio"]:checked + .form-radio_choice_type_label::after {
     position: absolute;
   }
+
   .form-header_status {
     flex: initial;
   }
+
   .form-submit {
     justify-content: flex-end;
   }
 
+  /* .wrapper_form_bottom_content{
+    margin-left: 2em;
+  } */
   .form-submit_input {
     margin-right: 2em;
   }
+
   .form-footer_info_text {
     width: 300px;
   }
+
   .footer_logo {
     margin-right: 3em;
   }
+
 }
  
